Update footer and logo styles in App.css: change footer position to relative and adjust logo container to prevent overflow

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ button:active {
 }
 
 footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   background-color: var(--background-color);
@@ -129,14 +129,11 @@ img {
 }
 
 .logo-container {
-  width: 90vw;
+    overflow-x: hidden;
 }
 
 .logos {
   display: grid;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
   width: 100%;
   grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
   gap: var(--margin);
